WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163769
[Win][Direct2D] Correct some memory leaks and other minor bugs
https://bugs.webkit.org/show_bug.cgi?id=163769
Summary
[Win][Direct2D] Correct some memory leaks and other minor bugs
Brent Fulgham
Reported
2016-10-20 17:56:37 PDT
While playing with
http://browserbench.org/MotionMark
I discovered a few leaks, as well as some drawing errors. This patch corrects a number of problems found while running the benchmark.
Attachments
Patch
(16.57 KB, patch)
2016-10-20 18:08 PDT
,
Brent Fulgham
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2016-10-20 18:08:16 PDT
Created
attachment 292301
[details]
Patch
Brent Fulgham
Comment 2
2016-10-21 10:14:18 PDT
Committed in
r207681
. <
https://trac.webkit.org/changeset/207681
>.
Simon Fraser (smfr)
Comment 3
2016-10-21 10:26:34 PDT
Comment on
attachment 292301
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=292301&action=review
> Source/WebCore/platform/graphics/win/GradientDirect2D.cpp:72 > + if (m_gradient) { > + m_gradient->Release(); > + m_gradient = nullptr; > + }
Can we use smart pointers?
> Source/WebCore/platform/graphics/win/PathDirect2D.cpp:74 > + if (m_path) > + m_path->Release();
Can we use a smart pointer?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug